--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dev": "node --watch --env-file=.env server.js",
     "debug": "node --env-file=.env server.js",
     "test": "",
-     "start": "node app.js"
+     "start": "node server.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
